# po20151110svn

./: README.md
envx-/: Makefile  env-cur.c  envx-svn.c  libpwdx-svn.c
false-/: Makefile.am  configure.ac  configure.in
hello-/: INSTALL  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  configure.in  hello  hello-svn.c
hello-/autom4te.cache/: output.1  traces.0  traces.1
lab1/false-/: Makefile  README  false-svn.c
lab1/hello-/: Makefile  Makefile.am
lab1/logname-/: Makefile.am  configure.in
lab1/true-/: Makefile  Makefile.am  README
lab1/whoami-/: Makefile
lab2/envx-/: INSTALL  README  envx-svn.c
lab2/pwdx-/: pwdx-svn.c
lab2/so-pe/: libpe-svn.c
lab31/iproute2/: _README  configure
lab5/: README.md
lab5/procps-3.2.8/: Makefile  sysctl.c  top.c
lab5/procps-3.2.8/.pc/: applied-patches
lab5/procps-3.2.8/.pc/btime_from_proc_stat.patch/proc/: sysinfo.c
lab5/procps-3.2.8/.pc/ignore_erofs.patch/: sysctl.c
lab5/procps-3.2.8/debian/: changelog
lab5/procps-3.2.8/debian/patches/: ps_sched_batch_info
lab5/procps-3.2.8/proc/: readproc.c  sysinfo.c  version.c
lab5/procps-3.2.8/ps/: output.c  ps.1
logname-/: Makefile  configure.in  logname-svn.c
logname-/docs/: getlogin.man  logname.strace
pwdx-/: Makefile  README  libpwdx-svn.c  pwdx-svn  pwdx-svn.c
so-pe/: INSTALL  Makefile  README  envx-svn.c  libpe-svn  libpe-svn.h  pwdx-svn.c
true-/: INSTALL  Makefile  Makefile.am  configure.ac  configure.in  true-svn.c
whoami-/: Makefile.am  README  configure.in  whoami-svn.c
(+14 files in other folders)
