AC_INIT(whoami-svn, 0.1)
AC_PROG_CC
AC_CONFIG_FILES(Makefile)
AC_CHECK_HEADER(stdio.h)
AC_CHECK_HEADER(pwd.h)
AC_CHECK_HEADER(stdlib.h)
AC_CHECK_HEADER(unistd.h)
AC_CHECK_HEADER(sys/types.h)
AC_CHECK_LIB(c,printf)
AC_CHECK_LIB(c,getpwuid)
AC_CHECK_LIB(c,getuid)
AC_CHECK_FUNC(printf)
AC_CHECK_FUNC(getpwuid)
AC_CHECK_FUNC(getuid)
AM_INIT_AUTOMAKE(-Wall foreign)
AC_OUTPUT
